# lingua_fast

./: .env.example  .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  models
.cargo/: config.toml
gbnf/: word_contract.gbnf  word_contract_final.gbnf  word_contract_simple.gbnf  word_contract_working.gbnf
schema/: word_contract.schema.json
specs/: service.spec.md
src/: api.rs  config.rs  lib.rs  main.rs  util.rs  validate.rs
src/model/: llama.rs  mod.rs
tests/: api.rs  inference_llama.rs
xtask/: Cargo.toml  loadtest.rs
xtask/src/: main.rs
