[package]
name = "lingua-fast"
version = "0.1.0"
edition = "2021"
authors = ["Becks & Sam"]
license = "MIT"
resolver = "2"


[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
bytes = "1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
http = "1"
# JSON Schema validation
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }
# llama.cpp FFI bindings (safe wrapper around C API)
llama-cpp-sys = { version = "0.3", default-features = false, features = ["metal", "cublas"] }
# time & metrics
hdrhistogram = "7"
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"


[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "http2", "gzip"] }
rand = "0.8"


[build-dependencies]
cc = "1"


[workspace]
members = ["xtask"]


[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"
